fix how it works desktop alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -387,8 +387,22 @@ header {
     width: 90%;
     margin: 0 auto;
 
+    @media (min-width: 1024px) {
+      display: flex;
+      flex-wrap: wrap;
+      width: 70%;
+      height: 450px;
+      justify-content: center;
+      align-items: center;
+    }
+
     .card {
       margin: 0.5rem 0;
+
+      @media (min-width: 1024px) {
+        flex-basis: 50%;
+        max-width: 400px;
+      }
 
       h3 {
         color: black;
